v2.0.0
 - websocket events moved to tdws package
 - removed deprecated server.roster event
 - not nullable IconData

v1.34.1
 - tdapi.MyReactions
 - tdapi.DevicePing
 - tdapi.GroupMembers
 - tdapi.MessageMarkup
 - tdapi.TaskColors
 - tdapi.ColorRule
 - removed tdapi.GroupMember, use tdproto.GroupMembership instead

v1.34.0
 - tdapi.UploadFilter

v1.33.7
 - Contact.can_import_tasks field

v1.33.6
 - Contact.can_manage_projects field

v1.33.5
 - tdapi.Contact, tdapi.Integration, tdapi.Team
 - Contact.add_to_team_rights field removed
 - Team.pinned field added
 - PushDevice docs

v1.33.4
 - features.min_corp_ios_version and features.min_corp_android_version

v1.33.3
 - remove deprecated ServerCallOffer and ClientCallAnswer
 - mark ServerCallAnswer as deprecated (left for backward compatibility)

v1.33.2
 - add comments to *.call.sdp events
 - extract JSEP struct to file from server_call_answer.go

v1.33.1
 - tdapi.Draft
 - gentime for draft renamed to draft_gentime

v1.33.0
 - experimental client.call.sdp / server.call.sdp events
 - group wiki page removed
 - draft_num replaced by gentime in server.chat.draft

v1.32.0
 - features.calls deprecated. Use features.calls_version: (0 = disabled, 1 = audio only, 2 = audio+video)
 - features.min_app_version deprecated. Use features.min_ios_version, features.min_android_version