@@ -8,12 +8,12 @@ var ChatPaths = []PathSpec{
 	{
 		Path: "/api/v4/teams/{team_id}/chats/{chat_id}",
 		Get: &OperationSpec{
-			Responce:    tdproto.Chat{},
+			Response:    tdproto.Chat{},
 			Description: "Get the chat information.",
 		},
 		Put: &OperationSpec{
 			Request:     tdproto.Chat{},
-			Responce:    tdproto.Chat{},
+			Response:    tdproto.Chat{},
 			Description: "Change chat settings.",
 		},
 	},
@@ -28,11 +28,11 @@ var ChatPaths = []PathSpec{
 		Path: "/api/v4/teams/{team_id}/chats/{chat_id}/messages/{message_id}",
 		Post: &OperationSpec{
 			Request:     tdproto.Message{},
-			Responce:    tdproto.Message{},
+			Response:    tdproto.Message{},
 			Description: "Edit message.",
 		},
 		Delete: &OperationSpec{
-			Responce:    tdproto.Message{},
+			Response:    tdproto.Message{},
 			Description: "Delete message.",
 		},
 	},
@@ -47,11 +47,11 @@ var ChatPaths = []PathSpec{
 		Path: "/api/v4/teams/{team_id}/chats/{contact_id}/messages/{message_id}",
 		Post: &OperationSpec{
 			Request:     tdproto.Message{},
-			Responce:    tdproto.Message{},
+			Response:    tdproto.Message{},
 			Description: "Edit message in direct chat.",
 		},
 		Delete: &OperationSpec{
-			Responce:    tdproto.Message{},
+			Response:    tdproto.Message{},
 			Description: "Delete message in direct chat.",
 		},
 	},
