@@ -231,7 +231,7 @@ func getDescription(method api_paths.OperationSpec) string {
 
 func convertPathSpecMethod(method api_paths.OperationSpec, operation **openApiOperation) error {
 	getRepsonce := openApiResponse{}
-	err := interfaceToOaContents(method.Responce, &getRepsonce.Content, true)
+	err := interfaceToOaContents(method.Response, &getRepsonce.Content, true)
 	if err != nil {
 		return err
 	}
